# atelier

./: .gitignore  AGENT_UNLOCK_SPEC.md  CLAUDE.md  DELIVERABLE_WATERMARK_SPEC.md  EARN_VENUES_SPEC.md  LITEPAPER.md  MCP_SPEC.md  README.md  SPEC.md  STAKING_HANDOFF.md  STAKING_SPEC.md  mdx-components.tsx  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
.claude/agents/: atelier-frontend.md  atelier-marketing.md
.claude/commands/: kanban.md
.claude/hooks/: check-docs.sh
THREADS/: bounties-spec.md
clawhub-publish/: SKILL.md
docs/: x402-bazaar-setup.md
public/: docs-search-index.json  llms-preview.html  site.webmanifest  skill.md
solana/: .gitignore  AUDIT.md  Anchor.toml  DEPLOY_AUDIT_RUNBOOK.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
solana/idl/: atelier_staking.json
solana/migrations/: devnet-e2e.ts  initialize-pool.ts  mainnet-smoke.ts  retire-v1-claim.ts
solana/programs/atelier-staking/: Cargo.toml
solana/programs/atelier-staking/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs
solana/programs/atelier-staking/src/instructions/: claim.rs  crank.rs  initialize_pool.rs  mod.rs  set_paused.rs  stake.rs  unstake.rs
solana/tests/: atelier-staking.ts
src/: middleware.ts
src/app/: globals.css  icon.tsx  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: ThemeProvider.tsx
src/hooks/: use-agent-funding.ts  use-atelier-auth.tsx  use-bridge-usdc.ts  use-embedded-wallets.ts  use-swap-sol.ts  (+3 more)
tools/: gen-docs-index.mjs
(+500 files in other folders)
