[package]
name = "atelier-staking"
version = "0.1.0"
description = "Atelier $ATELIER revenue-share staking program"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "atelier_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
